# SixSeven_Projects

./: .env.example  .gitignore  DEPLOY.md  README.md  docker-compose.yml
.claude/: launch.json
SixSeven_Projects/: SixSeven_Projects.ino  config.hpp  hardware.hpp  hardware_impl.hpp  hooks.hpp
app/: .dockerignore  Dockerfile  next.config.ts  package-lock.json  package.json  proxy.ts
app/app/: globals.css  layout.tsx  page.tsx
app/app/(auth)/: layout.tsx
app/components/: icons.tsx
app/components/brand/: Logo.tsx
app/lib/: api.ts  auth.tsx  cn.ts  nav.ts  site.ts  types.ts
backend/: .dockerignore  CMakeLists.txt  Dockerfile  README.md  README2.md  install.sh  main.cpp  start_backend.bat  start_local.sh
backend/DB/: CRUD.sql  POO.sql  config.sql  data.sql  functions.sql  logic.sql  tables.sql  triggers.sql  views.sql
backend/Rotas/: acess.hpp
backend/app/Config/: AppConfig.hpp  Database.hpp
backend/app/Controllers/: AnalyticsController.hpp  AuthController.hpp  BaseController.hpp  ConectionController.hpp  DispositivoController.hpp  HardwareController.hpp  HealthController.hpp
backend/app/Exceptions/: ApiException.hpp
backend/app/Helpers/: RequestParser.hpp  Response.hpp
backend/app/Middleware/: AuthMiddleware.hpp  CorsMiddleware.hpp
backend/app/Models/: Conection.hpp  Dispositivo.hpp  DispositivoConection.hpp  Info.hpp  InfoHistorico.hpp  Usuario.hpp  conections.hpp  dispositivos.hpp  dispositivos_conections.hpp  info.hpp  usuario.hpp
backend/app/Repository/: ConectionRepository.hpp  DispositivoConectionRepository.hpp  DispositivoRepository.hpp  InfoRepository.hpp  RefreshTokenRepository.hpp  UsuarioRepository.hpp  conectionsRepository.hpp  dispositivosConectionsRepository.hpp  dispositivosRepository.hpp  infoRepository.hpp  usuarioRepository.hpp
backend/app/Routes/: routes.md
backend/app/Security/: Hash.hpp  Jwt.hpp  PasswordHasher.hpp  Sanitizer.hpp
backend/app/Service/: AnalyticsService.hpp  AuthService.hpp  ConectionService.hpp  DispositivoService.hpp  HardwareService.hpp
backend/bootstrap/: Bootstrap.hpp
backend/composers/: README.md
backend/composers/libbcrypt/: bcrypt.c
backend/config/: app.config.example.json  db_connection.hpp
backend/docker/: entrypoint.sh
backend/pages/: biblioteca.hpp  index.cpp
backend/public/: index.html
hardware/: Dados.cpp  Dados.hpp  Hooks.cpp  Hooks.hpp  conexao.hpp  config.hpp  connection.hpp  hardware.hpp  hardware_impl.hpp  index.cpp
hardware/SixSeven_Projects/: SixSeven_Projects.ino  config.hpp  connection.hpp  data.hpp  hardware_impl.hpp  hooks.hpp
tests/: e2e.mjs  hardware-sim.mjs
(+36 files in other folders)
